# XRay

./: .dockerignore  .env.example  .envV1  .gitattributes  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  coverage.xml  lau_analysis.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  git-commit-instructions.md
.github/workflows/: ci.yml  docker.yml  static.yml
artifacts/: combined_results.csv  experiment_results.csv  index.html  locator_results.csv
artifacts/cache/: .gitkeep
artifacts/cli_pretty_test/: index.html  locator_results.csv
artifacts/cli_test/: index.html
artifacts/cli_test2/: index.html
artifacts/cli_test3/: index.html
artifacts/graphs/: .gitkeep
data/: dummy.csv
data/bragg/: LiF.csv  NaCl.csv
scripts/: pages_index.html  plot_bragg_data.py
scripts/ci/: build_graphs.sh  combine_coverage.sh  prepare_coverage.sh
src/xray/: __init__.py  __main__.py  cache.py  mathutils.py  path_manager.py  viz.py
src/xray/analysis/: peak_finding.py
src/xray/bragg/: calculations.py  cli.py  image_processing.py  main.py  peak_finding.py  peak_pairing.py  viz.py
src/xray/data_handler/: data_handler.py
src/xray/lau/: cli.py  hkl.py  image_processing.py  main.py  peak_finding.py
tests/: test_bragg_peak_finding.py  test_generators.py  test_lau_peak_finding.py  test_locators.py  test_mathutils.py  test_new_locators.py  test_noise_properties.py  test_peak_finding.py  test_scangen.py  test_simulation.py  test_symmetric_twopeak.py
